derive/tests/snapshots/on_soft_delete_cascade/Review/create_review.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**Create a row in the `review` table.

# Foreign keys

Fails with `ReferenceIntegrityViolation` unless each column references a row:

- `book_id`: a row of the `book` table (`self`), or `0`*/
    pub fn create_review<'a>(
        &'a self,
        review: CreateReview,
    ) -> Result<Review, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let book_id = review.book_id.value();
        let review = Review { id, book_id };
        let mut the_same_or_another_review: Option<Review> = None;
        if book_id.ne(&0) {
            match self.get_book_by_id(review.get_book_id()) {
                Ok(_) => {}
                Err(_) => {
                    return Err(
                        crate::spacetimedsl::error::SpacetimeDSLError::ReferenceIntegrityViolation(crate::spacetimedsl::error::ReferenceIntegrityViolationError::OnCreateOrUpdate {
                            table_name: "review".into(),
                            create_or_update: crate::spacetimedsl::error::CreateOrUpdate::Create,
                            column_names_and_row_values: format!(
                                "{{ book_id : {} }}", review.get_book_id().value()
                            )
                                .into(),
                        }),
                    );
                }
            };
        }
        let unique_column_values = (review.id.clone(),);
        match self.db().review().try_insert(review) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "review".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", unique_column_values.0
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "review".into(),
                        })
                    }
                }
            }
        }
    }
}
