derive/tests/snapshots/on_soft_delete_cascade/Review/get_all_reviews.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `review` table.
    pub fn get_all_reviews<'a>(&'a self) -> impl Iterator<Item = Review> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().review().iter()
    }
}
